--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
 nextjs-with-typescript
+.dccache
 
 # dependencies
 /node_modules
@@ -27,6 +27,7 @@ yarn-debug.log*
 yarn-error.log*
 
 # local env files
+.env*
 .env.local
 .env.development.local
 .env.test.local
