--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/icons-material": "^5.10.16",
     "@mui/material": "^5.10.16",
     "@next/font": "^13.0.5",
+    "@types/express": "^4.17.14",
     "next": "^13.0.5",
     "node-fetch": "^3.3.0",
     "react": "^18.2.0",
