--- a/package.json
+++ b/package.json
@@ -18,10 +18,15 @@
     "@mui/material": "^5.10.16",
     "@next/font": "^13.0.5",
     "@types/express": "^4.17.14",
+    "classnames": "^2.3.2",
+    "date-fns": "^2.29.3",
+    "gray-matter": "^4.0.3",
     "next": "^13.0.5",
     "node-fetch": "^3.3.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "remark": "^14.0.2",
+    "remark-html": "^15.0.1"
   },
   "devDependencies": {
     "@types/node": "latest",
